--- a/WSBridge/WSBridge.csproj
+++ b/WSBridge/WSBridge.csproj
@@ -35,6 +35,9 @@
     <Prefer32Bit>false</Prefer32Bit>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>WSBridge.Program</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
